# stinTest

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  LICENSE  README.md  dockerfile
.github/workflows/: gendocs.yml  merge.yml
Docs/: example1.Main.cpp.6f704dfdb1181e64de7444a1ccd2a276.html
Docs/Coverage/Html/: coverage.HttpCore.cpp.f20fe0f15960a273e6fd534f92eed67b.html  coverage.Main.cpp.6f704dfdb1181e64de7444a1ccd2a276.html  coverage.functions.html  coverage.html
Docs/Coverage/Sonarqube/: coverage.yml
Testing/Temporary/: CTestCostData.txt
lib/: CMakeLists.txt
src/: HttpConnection.cpp  HttpConnection.h  HttpCore.cpp  HttpCore.h  Main.cpp
test/: ctestScript.cmake
